apps/base/larapaper/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: larapaper
  labels:
    app.kubernetes.io/name: larapaper
    gateway.excloo.dev/public-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
