apps/base/larapaper/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: larapaper
  labels:
    app.kubernetes.io/name: larapaper
    gateway.excloo.dev/private-access: "true"
    gateway.excloo.dev/public-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: larapaper
  namespace: larapaper
  labels:
    app.kubernetes.io/name: larapaper
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: larapaper
  policyTypes:
    - Ingress
